[gd_scene load_steps=4 format=2]

[ext_resource path="res://src/ui/countdown_timer.gd" type="Script" id=1]

[sub_resource type="DynamicFontData" id=1]
font_path = "res://assets/fonts/PixelSmall_v2.ttf"

[sub_resource type="DynamicFont" id=2]
size = 64
font_data = SubResource( 1 )

[node name="CountdownTimer" type="Control"]
margin_left = 156.0
margin_top = 85.0
margin_right = 156.0
margin_bottom = 85.0
script = ExtResource( 1 )

[node name="CountdownLabel" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -34.0
margin_top = -27.5
margin_right = 34.0
margin_bottom = 27.5
custom_fonts/font = SubResource( 2 )
text = "0:00"
align = 1
valign = 1

[node name="Timer" type="Timer" parent="."]

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
